# GroupEProyect

./: README.md
ProjectTextGroupE/: CMakeLists.txt  CapitalizeTextstring.c  CapitalizeTextstring.h  endswith.c  endswith.h  formatNumeric.c  formatNumeric.h  joinString.c  joinString.h  lastMeeting.c  lastMeeting.h  main.c  palindroma.c  palindroma.h  splitString.c  splitString.h  verifyBrackets.c  verifyBrackets.h
VerifyTextString/: CMakeLists.txt  endswith.c  endswith.h  main.c  palindroma.c  palindroma.h  splitString.c  splitString.h
